partiql-beamline-sim/tests/snapshots/error__arrival_missing_config.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × `HomogeneousPoisson` Arrival Configuration
  ╰─▶   × Ion Decoding Error
         ╭─[arrival_missing_config.script:3:23]
       2 │         rand_processes::{
       3 │             $arrival: HomogeneousPoisson:: { nonsense: 5 },
         ·                       ────────────────────────────────────
       4 │             sensor: rand_process::{
         ╰────
