partiql-beamline-sim/tests/snapshots/error__bad_escapes.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × `Regex` Generator Configuration
  ├─▶   × Configuration Key `pattern`
  │   
  ╰─▶   × Ion Decoding Error
         ╭─[bad_escapes.script:8:53]
       7 │             $data: {
       8 │                 bad: Regex::{ pattern: "^some val \b\d{1,4}\b$" },
         ·                                                     ▲
         ·                                                     ╰── invalid escape sequence '\100
       9 │             }
         ╰────
