partiql-beamline-sim/tests/snapshots/error__config_expected.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × `Regex` Generator Configuration
  ╰─▶   × Expected Configuration
         ╭─[config_expected.script:6:26]
       5 │                 $data: {
       6 │                     err: Regex,
         ·                          ─────
       7 │                 }
         ╰────
