partiql-beamline-sim/tests/snapshots/error__config_key_duplicate.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error:   × `Regex` Generator Configuration
  ╰─▶   × Duplicate key `pattern`
         ╭─[config_key_duplicate.script:6:26]
       5 │                 $data: {
       6 │                     err: Regex::{ pattern: "foo", pattern: "foo" },
         ·                          ─────────────────────────────────────────
       7 │                 }
         ╰────
