partiql-beamline-sim/tests/snapshots/error__no_data.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × No data for random process
   ╭─[no_data.script:4:21]
 3 │             $arrival: HomogeneousPoisson:: { interarrival: minutes::5 },
 4 │             sensor: rand_process::{}
   ·                     ────────────────
 5 │         }
   ╰────
