partiql-beamline-sim/tests/snapshots/error__unknown_arrival.snap
---
source: partiql-beamline-sim/tests/error.rs
expression: output
---
  × Error in process configuration

Error: 
  × Unknown Binding {interarrival:5,}
   ╭─[unknown_arrival.script:3:23]
 2 │         rand_processes::{
 3 │             $arrival: NonsenseArrival:: { interarrival: minutes::5 },
   ·                       ──────────────────────────────────────────────
 4 │             sensor: rand_process::{
   ╰────
